# ifs-bot

./: console.py  pyproject.toml  readme.md  run.py  script.md
src/agents/identify_self/: __init__.py  identify_template.py
src/agents/part_finder/: __init__.py  part_finder.py  part_finder_template.py
src/agents/response_part_finder/: __init__.py  response_part_finder.py  response_part_finder_template.py
src/agents/symptom_finder/: __init__.py  symptom_finder.py  symptom_finder_template.py
src/workflow/: graph.py  nodes.py
